fixed discord FA

--- a/index.html
+++ b/index.html
@@ -49,22 +49,19 @@
 
         <div id="particles-js"></div>
         <span class="name">
-            <span>T </span>
-            <span>R </span>
-            <span>A </span>
             <span>S </span>
-            <span>H</span>
+            <span>O </span>
+            <span>H </span>
+            <span>A </span>
+            <span>M</span>
             <br>
             <span class="social">
-                <span><a href="https://twitter.com/sohamsinha_" class="icons"><i class="fab fa-twitter"></i></a> &ensp; <a href="mailto:sohamsinha2016@gmail.com" class="icons"><i class="fas fa-paper-plane"></i></a> &ensp; <a class="icons"><i class="fab fa-discord"></i></a></span>
+                <span><a href="https://twitter.com/sohamsinha_" class="icons"><i class="fab fa-twitter"></i></a> &ensp; <a href="mailto:ss5924@columbia.edu" class="icons"><i class="fas fa-paper-plane"></i></a> &ensp; <a href="https://www.github.com/whattrash" class="icons"><i class="fab fa-github"></i></a></span>
+                <br>
+                <span><a class="icons"><i class="fab fa-discord"></i></a><a class="discord-name"> whattrash#3825</a></span>
             </span>
         </span>
-
-        <div class="github">
-            <a href="https://github.com/whattrash">
-                <img class="resize" src="images/octocat.png" alt="GitHub">
-            </a>
-        </div>
+        <!--  -->
 
         <script class="p.js" type="text/javascript" src="particles/particles.js"></script>
         <script class="p.js" type="text/javascript" src="particles/app.js"></script>
