--- a/index.html
+++ b/index.html
@@ -41,11 +41,15 @@
           </nav>
         </div> -->
 
-        <div class="topnavbar">
-            <a class="active" href="home">Home</a>
+        <nav>
+        <ul class="topnavbar align-left">
+            <!-- <a class="active" href="home">Home</a>
             <a href="Info">Information</a>
-            <a href="Projects">Projects</a>
-        </div>
+            <a href="Projects">Projects</a> -->
+            <li><a href="https://whattrash.github.io/">Home</a></li>
+            <li><a href="info">Information</a></li>
+            <li><a href="projects">Projects</a></li>
+        </ul>
 
         <div id="particles-js"></div>
         <span class="name">
