--- a/index.html
+++ b/index.html
@@ -5,60 +5,37 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <title>soham sinha \o/</title>
-        <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
 
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/brands.css">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/regular.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/solid.css">
-        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/fontawesome.css">
         <link rel="stylesheet" href="styles.css">
         <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     </head>
 
     <body>
-        <!-- <div class="navbar">
-          <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">WhatTrash</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button> -->
 
-            <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                  <a class="nav-link" href="https://whattrash.github.io/">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="https://whattrash.github.io/info/">Information</a>
-                </li>
+        <nav class="topnav">
+            <ul>
+                <li><a href="/" class="links">HOME</a></li>
+                <li><a href="/projects" class="links">Projects</a></li>
+                <li><a href="/blog" class="links">Blog</a></li>
+                <li><a href="/about" class="links">About</a></li>
+            </ul>
 
-                <li class="nav-item">
-                  <a class="nav-link" href="https://whattrash.github.io/projects">Projects</a>
-                </li>
-              </ul>
-            </div>
-          </nav>
-        </div> -->
-
-        <div class="topnavbar">
-            <a class="active" href="home">Home</a>
-            <a href="Info">Information</a>
-            <a href="Projects">Projects</a>
-        </div>
+        </nav>
 
         <div id="particles-js"></div>
         <span class="name">
+            <span> // </span>
             <span>S </span>
             <span>O </span>
             <span>H </span>
             <span>A </span>
-            <span>M</span>
+            <span>M </span>
             <br>
             <span class="social">
                 <span><a href="https://twitter.com/sohamsinha_" class="icons"><i class="fab fa-twitter"></i></a> &ensp; <a href="mailto:ss5924@columbia.edu" class="icons"><i class="fas fa-paper-plane"></i></a> &ensp; <a href="https://www.github.com/whattrash" class="icons"><i class="fab fa-github"></i></a></span>
                 <br>
-                <span><a class="icons"><i class="fab fa-discord"></i></a><a class="discord-name"> whattrash#3825</a></span>
+                <!-- <span><a cl    ass="icons"><i class="fab fa-discord"></i></a><a class="discord-name"> whattrash#3825</a></span> -->
             </span>
         </span>
         <!--  -->
