[refactor]: temp landing page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <body>
 
-        <nav class="topnav">
+        <!-- <nav class="topnav">
             <ul>
                 <li><a href="/" class="links">HOME</a></li>
                 <li><a href="/projects" class="links">Projects</a></li>
@@ -21,7 +21,7 @@
                 <li><a href="/about" class="links">About</a></li>
             </ul>
 
-        </nav>
+        </nav> -->
 
         <div id="particles-js"></div>
         <span class="name">
@@ -32,9 +32,9 @@
             <span>A </span>
             <span>M </span>
             <br>
-            <span class="social">
+            <!-- <span class="social">
                 <span><a href="https://twitter.com/sohamsinha_" class="icons"><i class="fab fa-twitter"></i></a> &ensp; <a href="mailto:ss5924@columbia.edu" class="icons"><i class="fas fa-paper-plane"></i></a> &ensp; <a href="https://www.github.com/whattrash" class="icons"><i class="fab fa-github"></i></a></span>
-                <br>
+                <br> -->
                 <!-- <span><a cl    ass="icons"><i class="fab fa-discord"></i></a><a class="discord-name"> whattrash#3825</a></span> -->
             </span>
         </span>
