fix: update blur

--- a/index.html
+++ b/index.html
@@ -13,28 +13,20 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
     />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="static/branch.png"
-    />
+    <link rel="shortcut icon" type="image/x-icon" href="static/branch.png" />
     <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
     <main>
       <!-- navbar -->
-      <!-- <div id="nav" data-aos="zoom-out" data-aos-duration="500">
-        <a href="/">Home</a>
-        <a href="/projects">Projects</a>
-        <a href="/blog">Blog</a>
-        <a href="/about">About</a>
-      </div> -->
 
-      <div class="me"> 
+      
+
+      <div class="me">
         <h1>Soham Sinha</h1>
         <p>programmer & aspiring physicist</p>
-      </div>     
+      </div>
     </main>
   </body>
 </html>
