--- a/index.html
+++ b/index.html
@@ -2,16 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>soham sinha \o/</title>
+    <title>soham sinha</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
     />
     <link rel="shortcut icon" type="image/x-icon" href="static/branch.png" />
     <link rel="stylesheet" href="styles.css" />
@@ -20,8 +16,17 @@
   <body>
     <main>
       <!-- navbar -->
-
-      
+      <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent">
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav navbar-center darkened">
+            <a class="nav-item nav-link active" href="/"
+              >Home<span class="sr-only">(current)</span></a
+            >
+            <a class="nav-item nav-link" href="/projects/">Projects</a>
+            <a class="nav-item nav-link" href="/blog/">Blog</a>
+          </div>
+        </div>
+      </nav>
 
       <div class="me">
         <h1>Soham Sinha</h1>
